  standard ~M-;~ key,  extends the standard comment-dwim command: it is able
  to create multi-line C comments using the 1 or 2 stars continuation comment
  style.  The behaviour is selected by the new *pel-c-multiline-comments*
  user-option, which defaults to the standard behaviour and creates one
  comment per line.  Change that value to create multi-line comments instead.
* Version 0.4.1:
** Modifications:
- Fix: The File Management PDF now describes PEL's ability to select the
  function used opening the recently opened files and properly describes the
  key bindings that are inside the ~<f11> f M-r~ key prefix.
- Modified: modeline commands key binding:
  - changed the *pel:modeline* prefix from ~<f11> M-l~ to ~<f11> M-d~
    to make room for outline commands. The ~<f11> M-l~ is now bound to the
    outline-minor-mode command. Modified the key binding s to access the PEL
    PDF, the customization buffers accordingly.
- Removed global key bindings ~<f6> n~ and ~<f6> p~ to
  *pel-beginning-of-next-defun* and *beginning-of-defun*.  Kept the other
  bindings for these commands including in the ~<f6>~ key prefix.
- Modified: key binding for the *bm-next* command: instead of ~<f2>~ it is
  now ~<f2> <f2>~. It is not difficult to remember and type and restore
  access to Emacs default key bindings to the 2C-two-columns,
  2C-associate-buffer and 2C-split commands.
- Renamed: pel-imenu-dbg-print-vars to pel-imenu-print-vars for consistency.
- Modified: Removed the ~<f12> M-t~ key binding to Go-specific command
  *pel-go-set-tab-width*.  It was replaced by a globally available
  ~<f11> M-t~ key binding to the *pel-set-tab-width* that has the same behaviour
  but can be used to modify the display rendering of hard tabs in all major modes.
- Modified: key bindings to start Erlang EDTS: it was ~<f12> M-SPC~ and is now ~<f12> M-E~.
** New Features and Improvements:
- Improved: *pel-open-at-point* is now able to search for files inside the